Fix contrast problem on profile.html section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ li {
     color: #9C1C28 !important;
 }
 
-text-profile {
+.text-profile {
     color: #0a30ac !important;
 }
 
